[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/FisholutionCompletedPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/NSCompletedPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/FisholutionBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Textures/ui/restart1.png" type="Texture" id=6]
[ext_resource path="res://Textures/ui/restart2.png" type="Texture" id=7]
[ext_resource path="res://Textures/ui/ns1.png" type="Texture" id=8]
[ext_resource path="res://Textures/ui/ns2.png" type="Texture" id=9]
[ext_resource path="res://Textures/ui/home1.png" type="Texture" id=10]
[ext_resource path="res://Textures/ui/home2.png" type="Texture" id=11]
[ext_resource path="res://Textures/ui/pause1.png" type="Texture" id=12]
[ext_resource path="res://Textures/ui/pause2.png" type="Texture" id=13]
[ext_resource path="res://Textures/ui/play1.png" type="Texture" id=14]
[ext_resource path="res://Textures/ui/play2.png" type="Texture" id=15]
[ext_resource path="res://Textures/ui/calculate_panel.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="DynamicFont" id=5]
size = 27
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 27
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 27
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 27
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 27
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource( 1 )

[node name="Blur" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.341176 )
show_behind_parent = true
margin_right = 483.0
margin_bottom = 720.0
color = Color( 0, 0.552941, 0.745098, 1 )

[node name="FisholutionCompletedPanel" parent="." instance=ExtResource( 2 )]
visible = false

[node name="NSCompletedPanel" parent="." instance=ExtResource( 3 )]
visible = false

[node name="FisholutionBar" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 188.471
margin_top = 23.0
margin_right = 295.471
margin_bottom = 44.0

[node name="Labels" type="Node2D" parent="."]
editor/display_folded = true

[node name="ScoreLabel" type="Label" parent="Labels"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_right = 160.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.870588, 0.635294, 0.168627, 1 )
text = "124"
align = 1
valign = 1

[node name="TitleLabel" type="Label" parent="Labels"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 160.0
margin_right = 440.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.870588, 0.635294, 0.168627, 1 )
text = "Fisholution"
align = 1
valign = 1

[node name="HighscoreLabel" type="Label" parent="Labels"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = 240.0
margin_right = 360.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.294118, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Highscore: 546"
align = 1
valign = 1

[node name="Buttons" type="Node2D" parent="."]
pause_mode = 2
editor/display_folded = true

[node name="RestartButton" type="TextureButton" parent="Buttons"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.0
margin_top = 460.0
margin_right = 220.0
margin_bottom = 540.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="ChooseSceneButton" type="TextureButton" parent="Buttons"]
visible = false
margin_left = 260.0
margin_top = 460.0
margin_right = 340.0
margin_bottom = 540.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true

[node name="HomeButton" type="TextureButton" parent="Buttons"]
visible = false
margin_left = 200.0
margin_top = 540.0
margin_right = 280.0
margin_bottom = 620.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true

[node name="PauseButton" type="TextureButton" parent="Buttons"]
margin_left = 420.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 61.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true

[node name="ResumeButton" type="TextureButton" parent="Buttons"]
visible = false
margin_left = 420.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 61.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )
expand = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ScoreCalculatePanel" type="Panel" parent="."]
editor/display_folded = true
visible = false
self_modulate = Color( 1, 1, 1, 0.686275 )
margin_left = 120.0
margin_top = 320.0
margin_right = 360.0
margin_bottom = 420.0
custom_styles/panel = SubResource( 4 )

[node name="Score" type="Node2D" parent="ScoreCalculatePanel"]
editor/display_folded = true
position = Vector2( 20, 0 )

[node name="ScoreTitle" type="Label" parent="ScoreCalculatePanel/Score"]
margin_left = -8.0
margin_right = 132.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.168627, 0.811765, 0.792157, 1 )
text = "Score:"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="ScoreCalculatePanel/Score"]
margin_left = 140.0
margin_right = 220.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 6 )
text = "55"
align = 1
valign = 1

[node name="EatenFish" type="Node2D" parent="ScoreCalculatePanel"]
editor/display_folded = true
position = Vector2( 20, 0 )

[node name="EatenFishTitle" type="Label" parent="ScoreCalculatePanel/EatenFish"]
margin_left = -8.0
margin_top = 20.0
margin_right = 132.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.168627, 0.811765, 0.792157, 1 )
text = "Eaten Fish Bonus:"
align = 1
valign = 1

[node name="EatenFishLabel" type="Label" parent="ScoreCalculatePanel/EatenFish"]
margin_left = 140.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 7 )
text = "5 x 20"
align = 1
valign = 1

[node name="Winner" type="Node2D" parent="ScoreCalculatePanel"]
editor/display_folded = true
visible = false
position = Vector2( 20, 0 )

[node name="NSWinnerTitle" type="Label" parent="ScoreCalculatePanel/Winner"]
margin_left = -8.0
margin_top = 40.0
margin_right = 132.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.156863, 0.760784, 0.745098, 1 )
text = "Winner Bonus:"
align = 1
valign = 1

[node name="NSWinnerLabel" type="Label" parent="ScoreCalculatePanel/Winner"]
margin_left = 140.0
margin_top = 40.0
margin_right = 220.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1

[node name="Total" type="Node2D" parent="ScoreCalculatePanel"]
editor/display_folded = true
position = Vector2( 20, 0 )

[node name="TotalTitle" type="Label" parent="ScoreCalculatePanel/Total"]
margin_left = -8.0
margin_top = 60.0
margin_right = 132.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.156863, 0.760784, 0.745098, 1 )
text = "Total:"
align = 1
valign = 1

[node name="TotalLabel" type="Label" parent="ScoreCalculatePanel/Total"]
margin_left = 140.0
margin_top = 60.0
margin_right = 220.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 9 )
text = "255"
align = 1
valign = 1

[connection signal="fisholution_up" from="FisholutionBar" to="." method="_on_FisholutionBar_fisholution_up"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Buttons/ChooseSceneButton" to="." method="_on_ChooseSceneButton_pressed"]
[connection signal="pressed" from="Buttons/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Buttons/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Buttons/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
